# bq-test

./: .env.example  Justfile  README.md  pyproject.toml
docs/: RESEARCH_HANDOFF.md
infra/: schema.sql  table_schema.json
src/: config.py  main.py  mcp_server.py  rag_service.py
